fix layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ html,
 }
 
 .wrapper {
-  height: calc(100% - 100px);
+  min-height: calc(100% - 100px);
 }
 
 .footer {
